[project]
name = "web-devloper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Muhammad Talha Iftikhar", email = "talhaiftikhar13209@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.108.0",
    "crewai-tools>=0.38.1",
]

[project.scripts]
web-devloper = "web_devloper:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
